# is219_flask

./: Dockerfile  README.md  README.rst  app.ini  docker-compose.yml  requirements.txt  setup.cfg
.github/workflows/: build.yml  dev.yml  prod.yml  test-build.yml  tests.yaml
flaskApp/: __init__.py  app.py  auth.py  blog.py  run.py
flaskApp/auth/: __init__.py
flaskApp/auth/templates/auth/: login.html  register.html
flaskApp/blog/: __init__.py
flaskApp/blog/templates/blog/: create.html  update.html
flaskApp/instance/: flaskr.sqlite
flaskApp/simple_pages/: __init__.py
flaskApp/simple_pages/templates/: welcome.html
flaskApp/static/: style.css
flaskApp/templates/: 404.html  base.html
flaskApp/templates/blog/: index.html
flaskr/: __init__.py  blog.py  schema.sql
instance/: flaskr.sqlite
tests/: conftest.py  data.sql  simple_pages_test.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
